удалена функция удаления лишних сообщений