@@ -8,7 +8,6 @@ import com.jtinder.client.telegram.service.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import org.telegram.telegrambots.meta.api.methods.PartialBotApiMethod;
-import org.telegram.telegrambots.meta.api.methods.updatingmessages.DeleteMessage;
 import org.telegram.telegrambots.meta.api.objects.CallbackQuery;
 import org.telegram.telegrambots.meta.api.objects.Message;
 
@@ -29,17 +28,60 @@ public class EditProfileHandler implements InputMessageHandler {
     public List<PartialBotApiMethod<?>> handle(Message message) {
         long chatId = message.getChatId();
         User user = userDataCache.getUserProfileData(chatId);
+        BotState botState = userDataCache.getUsersCurrentBotState(chatId);
+
+        if (botState.equals(BotState.EDIT_NAME)) {
+            return getEditName(chatId, user, message.getText());
+        }
+
+        if (botState.equals(BotState.EDIT_DESCRIPTION)) {
+            return getEditDescription(chatId, user, message.getText());
+        }
 
         if (message.getText().equals(messagesService.getText("button.editSex"))) {
-            DeleteMessage deleteMessage = botMethodService.getDeleteMessage(chatId, message.getMessageId());
-            return List.of(deleteMessage, botMethodService.getSendMessage(
+            userDataCache.setUsersCurrentBotState(chatId, BotState.EDIT_SEX);
+            return List.of(botMethodService.getSendMessage(
                     chatId,
                     messagesService.getText("reply.askSex"),
                     keyboardService.getInlineKeyboardSex()));
         }
 
-        return Collections.singletonList(botMethodService.getDeleteMessage(chatId, message.getMessageId()));
+        if (message.getText().equals(messagesService.getText("button.editName"))) {
+            userDataCache.setUsersCurrentBotState(chatId, BotState.EDIT_NAME);
+            return List.of(botMethodService.getSendMessage(
+                    chatId,
+                    messagesService.getText("reply.askName")));
+        }
+
+        if (message.getText().equals(messagesService.getText("button.editDescription"))) {
+            userDataCache.setUsersCurrentBotState(chatId, BotState.EDIT_DESCRIPTION);
+            return List.of(botMethodService.getSendMessage(
+                    chatId,
+                    messagesService.getText("reply.askDescription")));
+        }
+
+        if (message.getText().equals(messagesService.getText("button.editFindSex"))) {
+            userDataCache.setUsersCurrentBotState(chatId, BotState.EDIT_FIND);
+            return List.of(botMethodService.getSendMessage(
+                    chatId,
+                    messagesService.getText("reply.askFindSex"),
+                    keyboardService.getInlineKeyboardFindSex()));
+        }
+        return Collections.emptyList();
     }
+
+    private List<PartialBotApiMethod<?>> getEditDescription(long chatId, User user, String text) {
+        user.getProfile().setDescription(text);
+        //serverService.changeName(user.getProfile().getSex(), user);
+        userDataCache.setUsersCurrentBotState(chatId, BotState.PROFILE);
+        return List.of(botMethodService.getSendPhoto(chatId,
+                imageService.getFile(user.getProfile()),
+                keyboardService.getProfileMenu(), user.getProfile().getSex().getName() + ", " +
+                        user.getProfile().getName()), botMethodService.getSendMessage(
+                chatId,
+                messagesService.getText("reply.editDescription")));
+    }
+
 
     @Override
     public BotState getHandlerName() {
@@ -50,16 +92,70 @@ public class EditProfileHandler implements InputMessageHandler {
     public List<PartialBotApiMethod<?>> handle(CallbackQuery callbackQuery) {
         String usersAnswer = callbackQuery.getData();
         long chatId = callbackQuery.getMessage().getChatId();
-        DeleteMessage deleteMessage = botMethodService.getDeleteMessage(chatId, callbackQuery.getMessage().getMessageId());
-
         User user = userDataCache.getUserProfileData(chatId);
+
+        if (usersAnswer.equals(Sex.MALE.toString()) || usersAnswer.equals(Sex.FEMALE.toString())) {
+            return this.getEditSex(chatId, user, usersAnswer);
+        }
+
+        if (callbackQuery.getData().equals(messagesService.getText("button.maleedit")) ||
+                callbackQuery.getData().equals(messagesService.getText("button.femaleedit")) ||
+                callbackQuery.getData().equals(messagesService.getText("button.alledit"))) {
+            return getEditFindSex(chatId, user, usersAnswer);
+        }
+        return Collections.emptyList();
+    }
+
+
+
+
+    private List<PartialBotApiMethod<?>> getEditSex(long chatId, User user, String usersAnswer) {
         user.getProfile().setSex(Sex.valueOf(usersAnswer));
         serverService.changeSex(user.getProfile().getSex(), user);
         userDataCache.setUsersCurrentBotState(chatId, BotState.PROFILE);
-        return List.of(deleteMessage, (botMethodService.getSendPhoto(chatId,
+        return List.of(botMethodService.getSendPhoto(chatId,
                 imageService.getFile(user.getProfile()),
-                keyboardService.getProfileMenu(),user.getProfile().getSex().getName() + ", " +
-                        user.getProfile().getName())));
+                keyboardService.getProfileMenu(), user.getProfile().getSex().getName() + ", " +
+                        user.getProfile().getName()), botMethodService.getSendMessage(
+                chatId,
+                messagesService.getText("reply.editSex")));
+    }
+
+    private List<PartialBotApiMethod<?>> getEditName(long chatId, User user, String usersAnswer) {
+        user.getProfile().setName(usersAnswer);
+        //serverService.changeName(user.getProfile().getSex(), user);
+        userDataCache.setUsersCurrentBotState(chatId, BotState.PROFILE);
+        return List.of(botMethodService.getSendPhoto(chatId,
+                imageService.getFile(user.getProfile()),
+                keyboardService.getProfileMenu(), user.getProfile().getSex().getName() + ", " +
+                        user.getProfile().getName()), botMethodService.getSendMessage(
+                chatId,
+                messagesService.getText("reply.editName")));
+    }
+
+
+
+    private List<PartialBotApiMethod<?>> getEditFindSex(Long chatId, User user, String usersAnswer) {
+        switch (usersAnswer) {
+            case "MALE_EDIT":
+                user.getProfile().getFindSex().add(Sex.MALE);
+                break;
+            case "FEMALE_EDIT":
+                user.getProfile().getFindSex().add(Sex.FEMALE);
+                break;
+            case "ALL_EDIT":
+                user.getProfile().getFindSex().add(Sex.MALE);
+                user.getProfile().getFindSex().add(Sex.FEMALE);
+                break;
+        }
+        //serverService.changeSex(user.getProfile().getSex(), user);
+        userDataCache.setUsersCurrentBotState(chatId, BotState.PROFILE);
+        return List.of(botMethodService.getSendPhoto(chatId,
+                imageService.getFile(user.getProfile()),
+                keyboardService.getProfileMenu(), user.getProfile().getSex().getName() + ", " +
+                        user.getProfile().getName()), botMethodService.getSendMessage(
+                chatId,
+                messagesService.getText("reply.editFindSex")));
     }
 
 }
